--- a/13_BootStrap/16_carousel.html
+++ b/13_BootStrap/16_carousel.html
@@ -13,14 +13,63 @@
 
 </head>
 
-<body>
+<body class="container my-4">
+
+    <div id="slider1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/ny.jpg" alt="" >
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/mbk.jpg" alt="" >
+            </div>
+        </div>
+
+        <a href="#slider1" class="carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+
+        <a href="#slider1" class="carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
+
+    <div id="slider2" class="carousel slide carousel-fade my-5" data-ride="carousel">
+
+        <ol class="carousel-indicators">
+            <li data-target = "#slider2" data-slide-to="0" class="active"></li>
+            <li data-target = "#slider2" data-slide-to="1"></li>
+        </ol>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/ny.jpg" alt="" >
+                <div class="carousel-caption">
+                    <h5>Slider Action</h5>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/mbk.jpg" alt="" >
+            </div>
+        </div>
+
+        <a href="#slider2" class="carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+
+        <a href="#slider2" class="carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
 
     
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
