--- a/13_BootStrap/19_scrollspy.html
+++ b/13_BootStrap/19_scrollspy.html
@@ -9,17 +9,75 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    
+    <style>
+        body{
+            position: relative;
+        }
+    </style>    
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#home" class="nav-link"> home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link"> about</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#services" class="nav-link"> services</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link"> contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div id="home" class="bg-success" style="padding-bottom: 400px; padding-top: 400px;">
+        <div class="container">
+            <h1>Home</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, explicabo aspernatur illo placeat enim sunt quo necessitatibus natus ut error.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit distinctio totam excepturi corporis optio! Alias nesciunt neque cum quidem pariatur!</p>
+
+        </div>
+    </div>
+
+    <div id="about" class="bg-warning" style="padding-bottom: 400px; padding-top: 400px;">
+        <div class="container">
+            <h1>about</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, explicabo aspernatur illo placeat enim sunt quo necessitatibus natus ut error.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit distinctio totam excepturi corporis optio! Alias nesciunt neque cum quidem pariatur!</p>
+
+        </div>
+    </div>
+
+    <div id="services" class="bg-danger" style="padding-bottom: 400px; padding-top: 400px;">
+        <div class="container">
+            <h1>services</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, explicabo aspernatur illo placeat enim sunt quo necessitatibus natus ut error.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit distinctio totam excepturi corporis optio! Alias nesciunt neque cum quidem pariatur!</p>
+
+        </div>
+    </div>
+
+    <div id="contact" class="bg-secondary" style="padding-bottom: 400px; padding-top: 400px;">
+        <div class="container">
+            <h1>contact</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, explicabo aspernatur illo placeat enim sunt quo necessitatibus natus ut error.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit distinctio totam excepturi corporis optio! Alias nesciunt neque cum quidem pariatur!</p>
+
+        </div>
+    </div>
     
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
