--- a/13_BootStrap/20_popovers.html
+++ b/13_BootStrap/20_popovers.html
@@ -13,19 +13,64 @@
 
 </head>
 
-<body>
+<body class="container">
 
     
+    <a href="#" class="btn btn-primary" data-toggle="popover" title="popover header" data-content="some content">
+        Toggle Popover
+    </a>
+
+
+    <br><br><br><br>
+
+    <a href="#" data-placement="top" class="btn btn-primary" data-toggle="popover" title="popover header" data-content="some content">
+        top
+    </a>
+
+    <br><br><br><br><br><br>
+
+    <a href="#" data-placement="left" class="btn btn-primary" data-toggle="popover" title="popover header" data-content="some content">
+        left
+    </a>
+
+    <br><br><br><br><br><br>
+
+    <a href="#" data-placement="bottom" class="btn btn-primary" data-toggle="popover" title="popover header" data-content="some content">
+        bottom
+    </a>
+
+    <br><br><br><br><br><br>
+
+    <a href="#" data-placement="right" class="btn btn-primary" data-toggle="popover" title="popover header" data-content="some content">
+        right
+    </a>
+
+    <br><br><br><br><br><br>
+
+    <a href="#" data-trigger="focus" data-placement="right" class="btn btn-primary" data-toggle="popover" title="popover header" data-content="some content">
+        data trigger focus
+    </a>
+
+    <a href="#" data-trigger="hover" data-placement="right" class="btn btn-primary" data-toggle="popover" title="popover header" data-content="some content">
+        data trigger hover
+    </a>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
+    </script>
+
+    <script>
+        $(function(){
+            $('[data-toggle="popover"]').popover();
+        })
+
     </script>
 
 </body>
