--- a/13_BootStrap/22_Breakpoints.html
+++ b/13_BootStrap/22_Breakpoints.html
@@ -9,29 +9,56 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+
+        <style>
+
+            /*576 px altı extra small ama BS4'te extra small yok.*/
+
+            /*sm*/
+
+            body{
+                    background-color: gray;
+                }
+            @media(min-width: 576px){  
+                body{
+                    background-color: red;
+                }
+            }
+            /*md*/
+            @media(min-width: 768px){  
+                body{
+                background-color: green;
+            }
+
+            }
+            /*lg*/
+            @media(min-width: 992px){  
+                body{
+                background-color: blue;
+            }
+
+            }
+            /*xl*/
+            @media(min-width: 1200px){  
+                body{
+                background-color: yellow;
+            }
+
+            }
+        </style>
     
 
 </head>
 
-<body class="container my-4">
+<body>
 
-    <a href="#" class="btn btn-primary" data-toggle="tooltip" title="tooltip-text">
-        Hover over me
-    </a>
+    <div class="container bg-info" style="height: 100px;"></div>
 
-    <br><br><br><br><br><br><br><br>
+    <div class="container-fluid bg-secondary mt-4" style="height: 100px;">
 
-    <button type="button" class="btn btn-success" data-toggle="tooltip"
-     title="<h3> Header </h3> <br> <p> Tooltip Text2 </p> " data-html="true" >
-        Tooltip with Html
-    </button>
+    </div>
 
-    <br><br><br><br><br><br><br><br>
 
-    <a href="#" class="btn btn-primary" data-toggle="tooltip" title="tooltip-text" data-placement="left">
-        Tooltip on left
-    </a>
-    
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     </script>
@@ -40,12 +67,6 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
-    </script>
-
-    <script>
-        $(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
     </script>
 
 </body>
